@@ -1,0 +1,12 @@
+-----BEGIN CERTIFICATE-----
+MIIB0zCCAXqgAwIBAgIUa7LFUXebkKlHq2LuUbFzl6zwHFEwCgYIKoZIzj0EAwIw
+SDELMAkGA1UEBhMCVVMxCzAJBgNVBAgTAkNBMRYwFAYDVQQHEw1TYW4gRnJhbmNp
+c2NvMRQwEgYDVQQDEwtleGFtcGxlLm5ldDAeFw0xOTAxMDkwMDA4MDBaFw0yNDAx
+MDgwMDA4MDBaMEgxCzAJBgNVBAYTAlVTMQswCQYDVQQIEwJDQTEWMBQGA1UEBxMN
+U2FuIEZyYW5jaXNjbzEUMBIGA1UEAxMLZXhhbXBsZS5uZXQwWTATBgcqhkjOPQIB
+BggqhkjOPQMBBwNCAARyXGvKSk7lTt1N48LxBGm98Zu52Rsmg8EfUnAKFrtI0mMj
+tNS0uMcQWpYoRTEFp9+kEGg5iGt48b3KdlWQmaCXo0IwQDAOBgNVHQ8BAf8EBAMC
+AQYwDwYDVR0TAQH/BAUwAwEB/zAdBgNVHQ4EFgQUCGdVdx56MDyoGq6i+A6rhQ12
+bjMwCgYIKoZIzj0EAwIDRwAwRAIgIc2oic1oNvxqEASGsf3DFXdbkN84JVaNjZ30
+DqLCXpkCIGmCbj5EyxFhucfmLAi8WO7k2p+CswRG0IJOvTv4OE/l
+-----END CERTIFICATE-----
