@@ -1,0 +1,12 @@
+-----BEGIN CERTIFICATE-----
+MIIB1DCCAXqgAwIBAgIUG+8Xrwop+orlZS7uvYdRtHVhAEUwCgYIKoZIzj0EAwIw
+SDELMAkGA1UEBhMCVVMxCzAJBgNVBAgTAkNBMRYwFAYDVQQHEw1TYW4gRnJhbmNp
+c2NvMRQwEgYDVQQDEwtleGFtcGxlLm5ldDAeFw0xOTAxMDgyMzIxMDBaFw0yNDAx
+MDcyMzIxMDBaMEgxCzAJBgNVBAYTAlVTMQswCQYDVQQIEwJDQTEWMBQGA1UEBxMN
+U2FuIEZyYW5jaXNjbzEUMBIGA1UEAxMLZXhhbXBsZS5uZXQwWTATBgcqhkjOPQIB
+BggqhkjOPQMBBwNCAATF6yFmKLlK4pn0IyLe8J9BSJIrsUMlWKPHkQmcsugvx6t1
+dtABjz0i+rPeWAoFwkHJlWfYDYMoyIspLJqtR0AMo0IwQDAOBgNVHQ8BAf8EBAMC
+AQYwDwYDVR0TAQH/BAUwAwEB/zAdBgNVHQ4EFgQUwVQnhtGWzo1wASTnS+tcsxZ2
+EYgwCgYIKoZIzj0EAwIDSAAwRQIhAM202JO1fufgzWFHbQ3/qgKLvZeXuw5bkmq0
+Yx8JKNs6AiBc3NWqIqHGovDC4IwRilLkb5LK+QU6ndvBrnyNaTxCnQ==
+-----END CERTIFICATE-----
